Fixed heading font, admin toggle is too bold, replaced spacings and removed unnesessary usecallback

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/guidelines/headings/Heading.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/guidelines/headings/Heading.module.scss
@@ -4,7 +4,7 @@
 @use 'src/styles/font-weights';
 
 .heading {
-  @extend %font-family-montserrat;
+  @extend %font-family-roboto;
 
   color: colors.$text-dark-gray-color;
   font-weight: font-weights.$font-weight-regular;
