--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/submission-grid-row/SubmissionGridRow.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/submission-grid-row/SubmissionGridRow.module.scss
@@ -103,7 +103,7 @@
   font-weight: font-weights.$font-weight-semi-bold;
   margin: 0;
   outline: none;
-  padding: 10px 16px;
+  padding: spacings.$sp-8 spacings.$sp-16;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
